--- a/public/index.ejs
+++ b/public/index.ejs
@@ -1,12 +1,12 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title></title>
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1"/>
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<title>Webpack!</title>
 </head>
 
 <body>
 	<div id="app"></div>
-	
-	<script src="bundle.js"></script>
 </body>
 </html>
